
  [ Bastian Germann ]
  * Provide dist-info metadata (closes: #890200; LP: #1814019).

  [ Scott Kitterman ]
  * Remove myself from uploaders

  [ Dmitry Shachnev ]
  * Build the tools for all supported Python 3 versions.
  * Bump Standards-Version to 4.3.0, no changes needed.
  * Update debian/watch to use the new tarballs location.
  * New upstream release.

 -- Scott Kitterman <scott@kitterman.com>  Mon, 12 Nov 2018 00:57:12 -0500

pyqt5 (5.11.3+dfsg-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/watch: Use https protocol

  [ Dmitry Shachnev ]
  * New upstream release.
  * Update public_sip.diff, revert some more upstream changes.
  * Do not override default dh_builddeb parameters.
  * Install both upstream changelog and NEWS, per Policy 12.7.
  * Bump Standards-Version to 4.2.1, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 12 Oct 2018 12:35:34 +0300

pyqt5 (5.11.2+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Bump sip build-dependencies to 4.19.11, following configure.py.
  * Drop cura_crash.diff, applied in the new release.
  * Use the public version of sip module, per Policy § 4.13.
  * Configure with --no-dist-info for now, mk_distinfo.py does not work
    well with DESTDIR yet.
  * Update debhelper compat level to 11.
  * Bump Standards-Version to 4.1.5, no changes needed.
  * Update Homepage field in debian/control.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 06 Jul 2018 13:09:02 +0300

pyqt5 (5.10.1+dfsg-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/tests: Use AUTOPKGTEST_TMP instead of ADTTMP

  [ Dmitry Shachnev ]
  * Backport three upstream commits to fix crashes when running Cura
    (closes: #898211).
  * Drop ancient X-Python{,3}-Version fields.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 10 May 2018 17:09:00 +0300

pyqt5 (5.10.1+dfsg-1) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Preserve timestamps when copying jquery.min.js, to make pyrcc generate