@@ -10,10 +10,10 @@ Per https://www.debian.org/doc/debian-policy/#convenience-copies-of-code.
  3 files changed, 4 insertions(+), 4 deletions(-)
 
 diff --git a/configure.py b/configure.py
-index 32d03a0..3c43a14 100644
+index 366b868..243a748 100644
 --- a/configure.py
 +++ b/configure.py
-@@ -2440,7 +2440,7 @@ def get_sip_flags(target_config):
+@@ -2433,7 +2433,7 @@ def get_sip_flags(target_config):
      the target configuration.
      """
  
@@ -23,7 +23,7 @@ index 32d03a0..3c43a14 100644
      # If we don't check for signed interpreters, we exclude the 'VendorID'
      # feature
 diff --git a/designer/pluginloader.cpp b/designer/pluginloader.cpp
-index f41d391..3ca8b11 100644
+index 87a006c..c237351 100644
 --- a/designer/pluginloader.cpp
 +++ b/designer/pluginloader.cpp
 @@ -167,7 +167,7 @@ bool PyCustomWidgets::importPlugins(const QString &dir, const QStringList &plugi
@@ -36,7 +36,7 @@ index f41d391..3ca8b11 100644
          if (!sip_unwrapinstance)
              return true;
 diff --git a/qmlscene/pluginloader.cpp b/qmlscene/pluginloader.cpp
-index e14b946..140e80c 100644
+index 3825b0b..eadd038 100644
 --- a/qmlscene/pluginloader.cpp
 +++ b/qmlscene/pluginloader.cpp
 @@ -412,9 +412,9 @@ PyObject *PyQt5QmlPlugin::getModuleAttr(const char *module, const char *attr)
