@@ -11,6 +11,7 @@ pyqt5 (5.12+dfsg-1) UNRELEASED; urgency=medium
   * Bump Standards-Version to 4.3.0, no changes needed.
   * Update debian/watch to use the new tarballs location.
   * New upstream release.
+  * Refresh debian/patches/public_sip.diff.
 
  -- Scott Kitterman <scott@kitterman.com>  Mon, 12 Nov 2018 00:57:12 -0500
 
